# PyKimix-

./: LICENSE  MANIFEST.in  README.md  __init__.py  input.py  integration_engine.py  pyproject.toml
Examples/: Font3.py
src/pykimix/: __init__.py  animation.py  audio.py  audio_manager.py  core.py  gpu.py  input_manager.py  rendering.py  resources.py  scene_manager.py  sprites.py  utils.py  window_guard.py
src/pykimix/c_core/: collision.c  math.c  physics.c  pykimix_c.h  utils.c
