[project]
name = "pykimix"
version = "0.4.1"
description = "PyKimix is a Python engine integrating Pygame and Kivy. It supports GPU accelerated rendering, unified event handling for keyboard mouse touch and gamepads, asynchronous game loops, shared resources, high performance animations, and cross platform deployment.   Update logs: Added fonts and c"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "StormTheGuy" }
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/stormm-dev/pykimix"
Source = "https://pypi.org/project/pykimix/#files"
Issues = "https://github.com/stormm-dev/pykimix/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"